Flesh out game logic and commands

--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
             <div class="row">
                 <div class="col-xs-3">
                     <h4 class="text-center">Hero1</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero1" class="center-block hero-select" id="hero1">
+                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero1" class="center-block hero-select" id="hero1" value = "0">
                     <p class="text-center">Bio</p>
                 </div>
                 <div class="col-xs-3">
                     <h4 class="text-center">Hero2</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero2" class="center-block hero-select" id="hero2">
+                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero2" class="center-block hero-select" id="hero2" value = "1">
                     <p class="text-center">Bio</p>
                 </div>
                 <div class="col-xs-3">
                     <h4 class="text-center">Hero3</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero3" class="center-block hero-select" id="hero3">
+                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero3" class="center-block hero-select" id="hero3" value = "2">
                     <p class="text-center">Bio</p>
                 </div>
                 <div class="col-xs-3">
                     <h4 class="text-center">Hero4</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero4" class="center-block hero-select" id="hero4">
+                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero4" class="center-block hero-select" id="hero4" value = "3">
                     <p class="text-center">Bio</p>
                 </div>
             </div>
@@ -68,13 +68,31 @@
         <div class="col-xs-12">
             <h3 class="text-center">Select your opponent</h3>
             <div class="row">
-                <!-- Three opponents with same info as before will be appended here. -->
-                <!-- Each will be in a div with class col-xs-4 -->
+                <div class="col-xs-3">
+                    <h4 class="text-center">Hero1</h4>
+                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero1" class="center-block opponent-select" id="hero1">
+                    <p class="text-center">Bio</p>
+                </div>
+                <div class="col-xs-3">
+                    <h4 class="text-center">Hero2</h4>
+                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero2" class="center-block opponent-select" id="hero2">
+                    <p class="text-center">Bio</p>
+                </div>
+                <div class="col-xs-3">
+                    <h4 class="text-center">Hero3</h4>
+                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero3" class="center-block opponent-select" id="hero3">
+                    <p class="text-center">Bio</p>
+                </div>
+                <div class="col-xs-3">
+                    <h4 class="text-center">Hero4</h4>
+                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero4" class="center-block opponent-select" id="hero4">
+                    <p class="text-center">Bio</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="row stage-3 stage-4">
+    <div class="row stage-3">
         <div class="col-xs-12">
             <h3 class="text-center">Battle</h3>
             <div class="row">
@@ -91,7 +109,7 @@
         </div>
     </div>
 
-    <div class="row stage-4">
+    <div class="row stage-3">
         <div class="col-xs-12">
             <h3 class="text-center">Results</h3>
             <p id="damage-done" class="text-center"></p>
@@ -99,7 +117,7 @@
         </div>
     </div>
 
-    <div class="row stage-5">
+    <div class="row stage-4">
         <div class="col-xs-12">
             <!-- Win or loss message -->
             <h3 id="completion-message" class="text-center"></h3>
