Add images/theme, tie logic together, begin pushing to page, remove placeholders

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Some Kinda RPG</title>
+    <title>Overwatchy RPG</title>
     <!-- For media queries. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to the jQuery Library -->
@@ -26,41 +26,25 @@
 
 <body class="center-block">
     <header class="row center-block">
-        <h1 class="text-center">An RPG Header</h1>
+        <h1 class="text-center">Vaguely Overwatch RPG</h1>
     </header>
 
     <div class="row stage-1 center-block">
         <div class="col-xs-12">
             <h3 class="text-center">Select your hero</h3>
             <div class="row">
-                <div class="col-xs-3">
-                    <h4 class="text-center">Hero1</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero1" class="center-block hero-select" id="hero1" value = "0">
-                    <p class="text-center">Bio</p>
-                </div>
-                <div class="col-xs-3">
-                    <h4 class="text-center">Hero2</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero2" class="center-block hero-select" id="hero2" value = "1">
-                    <p class="text-center">Bio</p>
-                </div>
-                <div class="col-xs-3">
-                    <h4 class="text-center">Hero3</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero3" class="center-block hero-select" id="hero3" value = "2">
-                    <p class="text-center">Bio</p>
-                </div>
-                <div class="col-xs-3">
-                    <h4 class="text-center">Hero4</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero4" class="center-block hero-select" id="hero4" value = "3">
-                    <p class="text-center">Bio</p>
-                </div>
+                <div class="col-xs-3" id="hero-0"></div>
+                <div class="col-xs-3" id="hero-1"></div>
+                <div class="col-xs-3" id="hero-2"></div>
+                <div class="col-xs-3" id="hero-3"></div>
             </div>
         </div>
     </div>
 
     <div class="row stage-2">
         <div class="col-xs-12">
-            <h3 id="hero-selected" class="text-center">You selected Hero</h3>
-            <img id="hero-image" src="assets/images/rip.gif" alt="Image of Hero" class="center-block">
+            <h3 id="selected-hero" class="text-center">You selected Hero</h3>
+            <!-- <img id="hero-image" src="assets/images/rip.gif" alt="Image of Hero" class="center-block"> -->
         </div>
     </div>
 
@@ -68,26 +52,9 @@
         <div class="col-xs-12">
             <h3 class="text-center">Select your opponent</h3>
             <div class="row">
-                <div class="col-xs-3">
-                    <h4 class="text-center">Hero1</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero1" class="center-block opponent-select" id="hero1">
-                    <p class="text-center">Bio</p>
-                </div>
-                <div class="col-xs-3">
-                    <h4 class="text-center">Hero2</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero2" class="center-block opponent-select" id="hero2">
-                    <p class="text-center">Bio</p>
-                </div>
-                <div class="col-xs-3">
-                    <h4 class="text-center">Hero3</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero3" class="center-block opponent-select" id="hero3">
-                    <p class="text-center">Bio</p>
-                </div>
-                <div class="col-xs-3">
-                    <h4 class="text-center">Hero4</h4>
-                    <img src="assets/images/rip.gif" role="button" alt="Image of Hero4" class="center-block opponent-select" id="hero4">
-                    <p class="text-center">Bio</p>
-                </div>
+                <div class="col-xs-4" id="opponent-0"></div>
+                <div class="col-xs-4" id="opponent-1"></div>
+                <div class="col-xs-4" id="opponent-2"></div>
             </div>
         </div>
     </div>
@@ -96,24 +63,12 @@
         <div class="col-xs-12">
             <h3 class="text-center">Battle</h3>
             <div class="row">
-                <div class="col-xs-6" id="your-hero"></div>
-                <div class="col-xs-6" id="your-opponent"></div>
+                <div class="col-sm-5" id="your-hero"></div>
+                <div class="col-sm-2">
+                    <button class="btn btn-success center-block" id="button-attack">ATTACK</button>
+                </div>
+                <div class="col-sm-5" id="your-opponent"></div>
             </div>
-        </div>
-    </div>
-
-    <div class="row stage-3">
-        <div class="col-xs-12">
-            <h3 class="text-center">Attack!</h3>
-            <button class="btn btn-success center-block" id="button-attack">ATTACK</button>
-        </div>
-    </div>
-
-    <div class="row stage-3">
-        <div class="col-xs-12">
-            <h3 class="text-center">Results</h3>
-            <p id="damage-done" class="text-center"></p>
-            <p id="damage-taken" class="text-center"></p>
         </div>
     </div>
 
