--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Overwatchy RPG</title>
+    <title>Overwatch Fist Fight</title>
     <!-- For media queries. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to the jQuery Library -->
@@ -13,9 +13,7 @@
     <!-- Bootstrap CDN link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Google fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700" rel="stylesheet"> -->
-    <!-- Materialize CSS framework segment -->
-    <!-- <link rel="stylesheet" href="assets/css/materialize.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
     <!-- Personal stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Favicon -->
@@ -25,63 +23,59 @@
 </head>
 
 <body class="center-block">
-    <header class="row center-block">
-        <h1 class="text-center">Vaguely Overwatch RPG</h1>
-    </header>
+    <div class="transparency-wrapper">
+        <header class="row center-block">
+            <h1 class="text-center">Overwatch Fist Fight</h1>
+            <h3 class="text-center">~like Overwatch, if all you could do was 1v1 melee attack~</h3>
+        </header>
 
-    <div class="row stage-1 center-block">
-        <div class="col-xs-12">
-            <h3 class="text-center">Select your hero</h3>
-            <div class="row">
-                <div class="col-xs-3" id="hero-0"></div>
-                <div class="col-xs-3" id="hero-1"></div>
-                <div class="col-xs-3" id="hero-2"></div>
-                <div class="col-xs-3" id="hero-3"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row stage-2">
-        <div class="col-xs-12">
-            <h3 id="selected-hero" class="text-center">You selected Hero</h3>
-            <!-- <img id="hero-image" src="assets/images/rip.gif" alt="Image of Hero" class="center-block"> -->
-        </div>
-    </div>
-
-    <div class="row stage-2">
-        <div class="col-xs-12">
-            <h3 class="text-center">Select your opponent</h3>
-            <div class="row">
-                <div class="col-xs-4" id="opponent-0"></div>
-                <div class="col-xs-4" id="opponent-1"></div>
-                <div class="col-xs-4" id="opponent-2"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row stage-3">
-        <div class="col-xs-12">
-            <h3 class="text-center">Battle</h3>
-            <div class="row">
-                <div class="col-sm-5" id="your-hero"></div>
-                <div class="col-sm-2">
-                    <button class="btn btn-success center-block" id="button-attack">ATTACK</button>
+        <div class="row stage-1 center-block">
+            <div class="col-xs-12">
+                <h3 class="text-center">Select your hero</h3>
+                <div class="row">
+                    <div class="col-xs-3" id="hero-0"></div>
+                    <div class="col-xs-3" id="hero-1"></div>
+                    <div class="col-xs-3" id="hero-2"></div>
+                    <div class="col-xs-3" id="hero-3"></div>
                 </div>
-                <div class="col-sm-5" id="your-opponent"></div>
             </div>
         </div>
-    </div>
 
-    <div class="row stage-4">
-        <div class="col-xs-12">
-            <!-- Win or loss message -->
-            <h3 id="completion-message" class="text-center"></h3>
-            <!-- A little message about how winning/losing affects things. -->
-            <p id="completion-story" class="text-center"></p>
-            <button class="btn center-block" id="button-reset">Play Again</button>
+        <div class="row stage-2">
+            <div class="col-xs-12">
+                <h3 id="selected-hero" class="text-center"></h3>
+            </div>
+        </div>
+
+        <div class="row stage-2 center-block">
+            <div class="col-xs-12">
+                <h3 class="text-center">Select an opponent</h3>
+                <div class="row">
+                    <div class="col-xs-4" id="opponent-0"></div>
+                    <div class="col-xs-4" id="opponent-1"></div>
+                    <div class="col-xs-4" id="opponent-2"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row stage-3">
+            <!-- Your hero and health -->
+            <div class="col-xs-5" id="your-hero"></div>
+            <div class="col-xs-2">
+                <!-- Battle title and attack button -->
+                <h3 class="text-center">Battle</h3>
+                <button class="btn btn-danger center-block" id="button-attack"><p class="button-text">Melee</p></button>
+                <!-- Declares win or loss. -->
+                <div class="stage-4">
+                    <h3 id="completion-message" class="text-center"></h3>
+                    <!-- Reset button text depends on result. -->
+                    <button class="btn btn-info center-block" id="button-reset"></button>
+                </div>
+            </div>
+            <!-- Your opponent and their health -->
+            <div class="col-xs-5" id="your-opponent"></div>
         </div>
     </div>
-
 
 </body>
 
