Add favicon, add accented u, change selected hero display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Personal stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Favicon -->
-    <!-- <link rel="icon" href=""> -->
+    <link rel="icon" href="assets/images/logo.png">
     <!-- Game script -->
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </head>
@@ -27,6 +27,7 @@
         <header class="row center-block">
             <h1 class="text-center">Overwatch Fist Fight</h1>
             <h3 class="text-center">~like Overwatch, if all you could do was 1v1 melee attack~</h3>
+            <h2 id="selected-hero" class="text-center"></h2>
         </header>
 
         <div class="row stage-1 center-block">
@@ -38,12 +39,6 @@
                     <div class="col-xs-3" id="hero-2"></div>
                     <div class="col-xs-3" id="hero-3"></div>
                 </div>
-            </div>
-        </div>
-
-        <div class="row stage-2">
-            <div class="col-xs-12">
-                <h3 id="selected-hero" class="text-center"></h3>
             </div>
         </div>
 
