Overhaul all page-writing functions to stand apart from on-click functions and game logic functions

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             <h1 class="text-center">Overwatch Fist Fight</h1>
             <h4 class="text-center">~like Overwatch, if all you could do was 1v1 melee attack~</h4>
         </header>
-
         <!-- Hero selection div -->
         <div class="row stage-1 center-block">
             <div class="col-xs-12">
@@ -45,7 +44,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Opponent selection div -->
         <div class="row stage-2 center-block">
             <div class="col-xs-12">
@@ -57,7 +55,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Battle and Win/Loss Div -->
         <div class="row stage-3 center-block">
             <div class="row">
@@ -71,7 +68,8 @@
                 <!-- Center column holds buttons and win/loss display -->
                 <div class="col-xs-2">
                     <!-- Battle title and attack button -->
-                    <button class="btn btn-danger center-block" id="button-attack"><h3 class="button-text">Melee</h3></button>
+                    <button class="btn btn-danger center-block" id="button-attack">
+                        <h3 class="button-text">Melee</h3></button>
                     <!-- Declares win or loss. -->
                     <div class="stage-4">
                         <!-- A different message displays based on win or loss. -->
@@ -85,7 +83,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
